<resources>
    <string name="app_name">SpeakFree</string>'
    <string name="hello_world">Hello World!</string>
    <string name="start">Start!</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_help">Help</string>

    <string name="help">
        We are surrounded by microphones in our phones, tablets, laptops, televisions, and other "Internet of Things" devices. These devices can listen to and transmit our conversations at any time.\n\n
        Identifying each nearby microphone and getting to a safe distance just to have a private conversation is not always possible. Instead, SpeakFree produces loud noises in the range of human conversation to drown out your voice and make nearby microphones less effective.\n\n
        To use the app, simply press the play button and turn up the volume as loud as is comfortable. The static must be much louder than your conversation to drown out your voice. Speak quietly.\n\n
        This app is not guaranteed to make your conversation private; too low a volume, too close a microphone, or too skilled a sound engineer can still pick out your voice.\n\n
        Further tips for keeping your conversation private are provided on the main screen.
    </string>

    <string name="info">SpeakFree is a Daylighting Society project. This app produces loud noise, and may damage hearing or speakers if played at too high a volume. The user assumes all responsibility for this app regarding the wellbeing of people and equipment nearby.\n\n
    All button icons from Open Iconic under the MIT license. \n\n
    Find more information at: \n
    https://speakfree.daylightingsociety.org \n\n
    Feedback? Write to: \n
    speakfree@daylightingsociety.org</string>

    <string name="play_button_desc">Play Button</string>
    <string name="info_button_desc">Info Button</string>
    <string name="help_button_desc">Help Button</string>
    <string name="return_button_desc">Return Button</string>
    <string name="new_tip_desc">New Tip Button</string>
    <string name="refresh_desc">Refresh Button</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_internet_rationale">Internet access is require to download or submit new tips</string>
    <string name="status_image_desc">Status image to indicate whether noise is active</string>
    <string name="stay_safe">Stay safe</string>
    <string name="ok">@android:string/ok</string>
    <string name="main_warning">Warning: Loud noise - Set your volume low before starting.</string>
    <string name="tip_submitted">Your tip has been successfully submitted!</string>
    <string name="tip_submitted_error">There was an error submitting your tip. If the problem persists, please contact us at speakfree@daylightingsociety.org.</string>
    <string name="tips_refreshed">Tips have been refreshed!</string>
    <string name="tips_refreshed_error">There was an error refreshing tips. If the problem persists, please contact us at speakfree@daylightingsociety.org.</string>
</resources>
