<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.daylightingsociety.speakfree.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="162dp"
        android:orientation="horizontal"
        style="@android:style/ButtonBar"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary"/>

    <ImageView
        android:contentDescription="@string/status_image_desc"
        android:id="@+id/status_image"
        android:layout_height="130dp"
        android:layout_width="130dp"
        app:srcCompat="@drawable/inactive"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="@dimen/activity_vertical_margin" />



    <TextView
        android:id="@+id/main_tip"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_safe"
        android:textColor="@color/charcoal"
        android:textSize="@dimen/font_size"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/status_image"
        android:paddingEnd="16dp"
        android:paddingStart="16dp" />

    <TextView
        android:id="@+id/main_warning"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_warning"
        android:textColor="@color/warning"
        android:textSize="@dimen/font_size"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="parent"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"/>



</android.support.constraint.ConstraintLayout>